--- a/templates/otp/health_workers.html
+++ b/templates/otp/health_workers.html
@@ -18,7 +18,7 @@
             <tr>
                 <td>{{row.alias}}</td>
                 <td>{{row.name}}</td>
-                <td><a href="../health_post/{{row.hu_pk}}">{{row.hp}}</a></td>
+                <td><a href="../health_post/{{row.hp_pk}}">{{row.hp}}</a></td>
                 <td>{{row.contact}}</td>
             </tr>
         {% endfor %}
