--- a/templates/otp/index.html
+++ b/templates/otp/index.html
@@ -7,9 +7,12 @@
 
 {% block page_tabs %}
 <ul id="page-tabs">
+	<li class="page"><a href="/otp/reports">Reports</a></li>
+	<li class="page"><a href="/otp/otpreports">OTP Reports</a></li>
 	<li class="page"><a href="/otp/health_posts">Health Posts</a></li>
 	<li class="page"><a href="/otp/health_workers">Health Workers</a></li>
-	<li class="page"><a href="/otp/reports">Reports</a></li>
+	
+	
 	
 </ul>
 {% endblock %}
@@ -20,13 +23,13 @@
 
 {% block left %}
 
-<div class="module"><h3>Summary</h3>
+<div class="module"><h3>Summary ({{ summary.percent }}% Complete)</h3>
     <div style="padding:5px;"> 
-        <p>The current weekly report period is:<br/>
+        <p>The current weekly report period is: <br/>
         <strong>{{ summary.period.start_date|date:"D d/m/Y" }} - {{ summary.period.end_date|date:"D d/m/Y" }}</strong></p>
-        <p><a href="../otp/health_posts"><strong>{{ summary.health_posts }}</strong> Health Posts</a> are registered.<br/>
-        <a href="health_units/?filter=current"><strong>{{ summary.up2date }}</strong> health unit{{ summary.up2date|pluralize }}</a> ha{{ summary.up2date|pluralize:"s,ve" }} completed the report for this period.<br/>
-        <a href="health_units/?filter=missing"><strong>{{ summary.missing }}</strong> health unit{{ summary.up2date|pluralize }}</a> ha{{ summary.up2date|pluralize:"s,ve" }} <strong>not</strong> completed the report for this period.</p>
+        <p><a href="../../otp/health_posts"><strong>{{ summary.health_posts }}</strong> Health Posts</a> are registered.<br/>
+        <a href="health_units/?filter=current"><strong>{{ summary.completed }}</strong> health Post{{ summary.completed|pluralize }}</a> ha{{ summary.completed|pluralize:"s,ve" }} completed the report for this period.<br/>
+        <a href="health_units/?filter=missing"><strong>{{ summary.missing }}</strong> health Post{{ summary.missing|pluralize }}</a> ha{{ summary.missing|pluralize:"s,ve" }} <strong>NOT</strong> completed the report for this period.</p>
     </div>
 </div>
 {% endblock %}
@@ -48,8 +51,8 @@
     <tbody>
         {% for row in table.rows %}
             <tr>
-                <td><a href="../health_worker/">{{row.otp_reporter}}</td>
-				<td><a href="../health_post/{{row.hp_pk}}">{{row.health_post}}</td>
+                <td><a href="../otp/health_worker/">{{row.otp_reporter}}</td>
+				<td><a href="../otp/health_post/{{row.hp_pk}}">{{row.health_post}}</td>
                 <td>{{row.new_admission}}</td>
 				<td>{{row.cured}}</td>
                 <td>{{row.died}}</td>
@@ -63,6 +66,13 @@
         {% endfor %}
     </tbody>
 </table>
+
+</div>
+
+<div class="module"><h3>SMS Alerts..</h3>
+
+<img src="simple.png" alt="Simple graph" width="650px" height="650px"/>
+
 
 </div>
 
