--- a/templates/otp/health_post.html
+++ b/templates/otp/health_post.html
@@ -1,10 +1,12 @@
-{% extends "otp/index.html" %}
+{% extends "otp/base2.html" %}
 {% block subtitle %}{{ health_post }}{% endblock %}
 
 
-{% block page_stylesheets %}
+{% block stylesheets %}
 {{ block.super }}
-<link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}otpet/static/datatables/media/css/datatable.css" />
+
+<link type="text/css" rel="stylesheet" href="/static/otpet/datatables/media/css/datatable.css" />
+<link type="text/css" rel="stylesheet" href="/static/otpet/datatables/extras/TableTools/media/css/TableTools.css" />
 <style type="text/css">
 #details {
     margin-top:10px;
@@ -19,11 +21,14 @@
     font-weight:bold;
 }
 </style>
-{% endblock page_stylesheets %}
+{% endblock stylesheets %}
 
 {% block javascripts %}
-<script type="text/javascript" language="javascript" src="{{ MEDIA_URL }}otpet/static/datatables/media/js/jquery.dataTables.min.js"></script>
-<script type="text/javascript" charset="utf-8">
+{{ block.super }}
+<script type="text/javascript" language="javascript" src="/static/otpet/datatables/media/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" language="javascript" src="/static/otpet/datatables/extras/TableTools/media/ZeroClipboard/ZeroClipboard.js"></script>
+    <script type="text/javascript" language="javascript" src="/static/otpet/datatables/extras/TableTools/media/js/TableTools.js"></script>
+    <script type="text/javascript" charset="utf-8">
 $(document).ready(function() {
     {% for report in reports %}
 	    $('#{{report.name}}').dataTable({
@@ -42,14 +47,14 @@ $(document).ready(function() {
 {% endblock javascripts %}
 
 
-{% block right %}
+{% block  content%}
 <h2>{{ health_unit }}</h2>
 
 <div class="box" style="width:455px;float:left;"><h3>Details</h3>
 
         <table id="details">
-            <tr><th>Name:</th><td>{{ health_unit.location_ptr }}</td><th>Code:</th><td>{{ health_unit.parish }}</td></tr>
-            <tr><th>Woreda:</th><td colspan="3">{{ health_unit.type }}</td></tr>
+            <tr><th>Name:</th><td>{{ health_post.name }}</td><th>Code:</th><td>{{ health_post.code }}</td></tr>
+            <tr><th>Woreda:</th><td colspan="3">{{ health_post.parent }}</td></tr>
             <tr><th>Zone:</th><td>{{ health_unit.latitude|default_if_none:"Unknown" }}</td><th>Region:</th><td>{{ health_unit.county }}</td></tr>
             
             <tr><th>Latitude:</th><td>{{ health_unit.catchment|default_if_none:"Unknown" }}</td><th>Longitude:</th><td>{{ health_unit.district }}</td></tr>
@@ -76,7 +81,7 @@ $(document).ready(function() {
 </div>
 <div style="clear:both;"></div>
 <div class="box" style="width:922px;"><h3>Recent Reports</h3>
-{% for report in reports %}
+{% for report in reports %} 
     <h2>{{report.cls.TITLE}}</h2>
     <table  cellpadding="0" cellspacing="0" border="0" id="{{report.name}}" class="display"> 
         <thead>
@@ -103,7 +108,9 @@ $(document).ready(function() {
 
         </thead>
         <tbody>
-            {% for row in report.rows %}
+        
+ 
+            {% for row in report %}a
                 <tr{% if not row.complete %} class="inc"{%endif%}>
                 {% for cell in row.cells %}
                         {% if cell.date %}
@@ -116,6 +123,48 @@ $(document).ready(function() {
             {% endfor %}
         </tbody>
     </table>
+    
+
 {% endfor %}
+        <table  cellpadding="0" cellspacing="0" border="0" id="report" class="display"> 
+        <thead>
+        <tr>
+        {% for column in columns %}
+            {% if sub_columns %}
+                {% if column.colspan %}
+                    <th colspan="{{column.colspan}}" class="spanned" style="font-size:8px">{{column.name}}</th>
+                {% else %}
+                    <th rowspan="2">{{column.name}}</th>
+                {% endif %}
+            {% else %}
+                    <th>{{column.name}}</th>
+            {% endif %}
+        {% endfor %}
+        </tr>
+        {% if report.sub_columns %}
+        <tr>
+            {% for column in report.sub_columns %}
+                <th>{{column.name}}</th>
+            {% endfor %}
+        </tr>
+        {% endif %}
+
+        </thead>
+        <tbody>
+        
+ 
+            {% for row in report %}
+                <tr{% if not row.complete %} class="inc"{%endif%}>
+                {% for cell in row.cells %}
+                        {% if cell.date %}
+                            <td style="white-space:nowrap;">{{cell.value|date:"d/m/Y"}}</date></td>
+                        {% else %}
+                            <td class="num">{{cell.value|default_if_none:""}}</td>
+                        {% endif %}
+                {% endfor %}
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 
 {% endblock %}
