--- a/templates/otp/health_posts.html
+++ b/templates/otp/health_posts.html
@@ -1,7 +1,7 @@
-{% extends "otp/index.html" %}
+{% extends "otp/base2.html" %}
 {% block subtitle %}Health Posts {% endblock %}
 
-{% block right %}
+{% block content %}
 <div class="module"><h3> Health Posts</h3> 
 <table width="100%"> 
     <thead><tr>
