--- a/templates/otp/report.html
+++ b/templates/otp/report.html
@@ -112,5 +112,6 @@
 </table>
 <div style="clear:both;"></div>
 <a href="?{{get_vars}}&excel=1"><strong>Download this report as a spreadsheet</strong></a>
+<img src="otp/reports.png" alt="Simple graph" width="650px" height="650px"/>
 {% endblock %}
 
