updated to work for new admissions only

--- a/templates/otp/otp_chart.html
+++ b/templates/otp/otp_chart.html
@@ -2,7 +2,7 @@
 {% block subtitle %}Reports{% endblock %}
 
 {% block content %}
-<form method="GET" action="/otp/report.png"
+<form method="GET" action="/otp/reports.png"
 <table>
     <tr>
         <td>Report Type: OTP Chart</td>
